[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Weapons/Knife/Knife.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Weapons/Knife/knife_sharp.obj" type="ArrayMesh" id=2]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.00394991, -0.006, -0.000410172, -0.00344096, -0.0212655, -0.000371084, -0.00342218, -0.0212264, 0.000414919, -0.00334526, -0.006, -0.00192181, -0.00191043, -0.0214525, 0.00394233, -0.00191043, -0.00686999, 0.00394233, -0.00186201, -0.0212657, -0.00405531, -0.00186201, -0.00705678, -0.00405531, 0.00184246, -0.0213478, -0.00410093, 0.00184246, -0.00697466, -0.00410093, 0.00189088, -0.0215346, 0.00398795, 0.00189088, -0.00678787, 0.00398795, 0.00330442, -0.006, 0.00200685, 0.00341965, -0.021306, 0.000420813, 0.00341965, -0.00701649, 0.000420813, 0.00343966, -0.0213476, -0.00037412, 0.00343966, -0.00697493, -0.00037412 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.00433705, -0.0275523, -0.000368401, -0.00430637, -0.0275332, 0.000437776, -0.004241, -0.0237999, -0.000359399, -0.0042136, -0.0238068, 0.000429082, -0.00377726, -0.0219644, -0.000397213, -0.00377726, -0.0219644, 0.000469464, -0.00348667, -0.0219644, -0.00126389, -0.00319789, -0.0236991, -0.00386496, -0.00290911, -0.0236991, 0.004515, -0.00262033, -0.0236991, -0.00502053, -0.00262033, -0.0236991, 0.00509278, -0.00243705, -0.0275408, -0.00466406, -0.00233246, -0.0236991, 0.00538272, -0.00233246, -0.02341, -0.00531047, -0.00221686, -0.0276, -0.00504314, -0.00221686, -0.0276, 0.00511539, -0.00204278, -0.0219644, -0.00444275, -0.00204278, -0.0219644, 0.004515, 0.00200194, -0.0219644, 0.004515, 0.00217602, -0.0276, -0.00504314, 0.00217602, -0.0276, 0.00511539, 0.00229162, -0.0236991, 0.00538272, 0.00229162, -0.02341, -0.00531047, 0.00229162, -0.0219644, -0.00386496, 0.00240099, -0.0275461, 0.00474559, 0.00241817, -0.0275652, -0.00470676, 0.0025795, -0.0236991, -0.00502053, 0.0025795, -0.0236991, 0.00509278, 0.0025795, -0.0219644, 0.00335943, 0.00315705, -0.0236991, 0.00393722, 0.00373642, -0.0219644, -0.000686105, 0.00373642, -0.0219644, 0.000469464, 0.00413668, -0.0238158, -0.000613167, 0.00420777, -0.023798, 0.000432363, 0.00422284, -0.0275065, -0.000626624, 0.00422197, -0.0235292, -9.63973e-05, 0.00430474, -0.0275577, 0.000441451 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -0.0046445, -0.006069, -0.00588843, -0.0046445, -0.006069, 0.00596068, -0.0046445, -0.0046242, -0.00588843, -0.0046445, -0.0046242, 0.00596068, -0.00348667, -0.006069, -0.0070445, -0.00348667, -0.006069, 0.00711675, -0.00348667, -0.0046242, -0.0070445, -0.00348667, -0.0046242, 0.00711675, -0.00344697, -0.00626918, -0.000357076, -0.00190816, -0.00629078, 0.00394763, -0.00186515, -0.00626927, -0.00404799, -0.000886756, -0.00433508, -0.00415292, -0.000886756, -0.00433508, 0.00335881, 0.000845918, -0.00433508, -0.00415292, 0.000845918, -0.00433508, 0.00335881, 0.00184526, -0.00627975, -0.00409438, 0.00188895, -0.0063016, 0.00399245, 0.00344505, -0.00627966, -0.000361543, 0.00344674, -0.006069, -0.0070445, 0.00344674, -0.006069, 0.00711675, 0.00344674, -0.0046242, -0.0070445, 0.00344674, -0.0046242, 0.00711675, 0.00460366, -0.006069, -0.00588843, 0.00460366, -0.006069, 0.00596068, 0.00460366, -0.0046242, -0.00588843, 0.00460366, -0.0046242, 0.00596068 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -0.000912737, -0.0048, -0.00427253, -0.000912737, -0.0048, 0.00346067, -0.000887434, 0.0213832, 0.00335946, -0.000887434, 0.0225387, 0.00220299, -0.000887434, 0.0277445, -0.00415445, -0.000887434, 0.0277445, -0.00357621, -0.000309311, -0.00433194, 0.0039377, -0.000309311, 0.0213832, 0.0039377, -0.000309311, 0.0257162, -0.000685822, -0.000309311, 0.0277445, -0.00299798, 0.000268304, -0.00433194, 0.0039377, 0.000268304, 0.0213832, 0.0039377, 0.000268304, 0.0228275, 0.0024921, 0.000268304, 0.026005, -0.000974148, 0.000268304, 0.0277445, -0.00299798, 0.000846597, -0.00433194, -0.00415445, 0.000846597, 0.0213832, 0.00335946, 0.000846597, 0.0228275, 0.00191466, 0.000846597, 0.0277445, -0.00415445, 0.000846597, 0.0277445, -0.00357621, 0.0008719, -0.0048, 0.00346067 )

[sub_resource type="Animation" id=5]
resource_name = "alternate_swing"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Blade:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -45, -30, 0 ), Vector3( 7.64719, -111.218, -75.1833 ), Vector3( 43.0647, -59.5081, 53.1707 ), Vector3( 22.391, -87.7873, 1.6892 ), Vector3( -45, -30, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Blade:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -45, -30, 0 ), Vector3( 7.43547, -76.9357, -29.1474 ), Vector3( -45.8437, -149.527, -23.9124 ), Vector3( 7.43547, -76.9357, -29.1474 ), Vector3( -45, -30, 0 ) ]
}

[node name="Knife" type="Spatial" groups=[
"knife",
]]
script = ExtResource( 1 )
shooting_sound = "knife"
moving_spread = 0.0
max_spraying_spread = 0.0

[node name="Blade" type="KinematicBody" parent="." groups=[
"knife",
]]
transform = Transform( 0.866025, 0.353553, -0.353553, 0, 0.707106, 0.707106, 0.5, -0.612372, 0.612372, 0, 0, 0 )
collision_layer = 4
collision_mask = 8

[node name="knife_sharp" type="MeshInstance" parent="Blade"]
transform = Transform( -3.09086e-07, 7.07107, -7.07107, 7.07107, 5, 5, 7.07107, -5, -5, 0.15, 0.1, -0.1 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null

[node name="CollisionShape4" type="CollisionShape" parent="Blade"]
transform = Transform( -3.09086e-07, 7.07107, -7.07107, 7.07107, 5, 5, 7.07107, -5, -5, 0.15, 0.1, -0.1 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="Blade"]
transform = Transform( -3.09086e-07, 7.07107, -7.07107, 7.07107, 5, 5, 7.07107, -5, -5, 0.15, 0.1, -0.1 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="Blade"]
transform = Transform( -3.09086e-07, 7.07107, -7.07107, 7.07107, 5, 5, 7.07107, -5, -5, 0.15, 0.1, -0.1 )
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Blade"]
transform = Transform( -7.15256e-07, 7.07107, -7.07107, 7.07107, 5, 5, 7.07107, -5, -5, 0.15, 0.1, -0.1 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/alternate_swing = SubResource( 5 )
anims/swing = SubResource( 6 )

[node name="RecoilResetTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RecoilResetTimer" to="." method="_on_RecoilResetTimer_timeout"]
